# reactor_arm

./: Readme.md  TODO  setrc
dynamixel_hardware_interface/scripts/: set_torque.py
dynamixel_motor/dynamixel_controllers/nodes/: controller_manager.py
dynamixel_motor/dynamixel_controllers/src/dynamixel_controllers/: joint_position_controller.py  joint_trajectory_action_controller.py
dynamixel_motor/dynamixel_driver/src/dynamixel_driver/: dynamixel_io.py  dynamixel_serial_proxy.py
reactor_controller/config/: controllers.yaml  controllers.yaml._hardware  controllers.yaml.bak  controllers.yaml.hardware  controllers_sim.yaml  manager.yaml  reactor_control.yaml  reactor_trajectory_controller.yaml  reactor_trajectory_controller.yaml.hardware  reactor_trajectory_controller_sim.yaml
reactor_controller/launch/: publisher.launch  reactor.launch  reactor2.launch  reactor2.launch.bak  reactor2.launch.hardware  reactor2_sim.launch  reactor3_sim.launch  reactor_control.launch  rviz.launch  tst_reactor.launch
reactor_controller/launch/rviz/: reactor_sim.rviz
reactor_controller/nodes/: dx_joint_state_publisher.py  joint_state_publisher.py  moveit_joint_state_publisher.py
reactor_controller/scripts/: joystick_control.py  kbhit.py  teleop.py  torque_off.sh
reactor_description/: urdf.rviz
reactor_description/launch/: display.launch  simulation.launch
reactor_description/robots/: 1reactor_description.URDF  reactor_description.URDF  reactor_description.gv
reactor_description/urdf/: reactor.gazebo  reactor.xml  reactor_description.xacro
reactor_gazebo/: CMakeLists.txt  package.xml
reactor_gazebo/launch/: reactor_world.launch
reactor_gazebo/worlds/: can.world
reactor_moveit_config/: .setup_assistant
reactor_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  reactor_description.srdf  reactor_execution_controllers.yaml
reactor_moveit_config/launch/: default_warehouse_db.launch  demo_sim.launch  move_group.launch  move_group_sim.launch  reactor_moveit_controller_manager.launch.xml
reactor_pick_place/: CMakeLists.txt  package.xml
reactor_pick_place/launch/: pick_place.launch
reactor_pick_place/src/: random_planning.cpp  simple_pick_place.cpp
