<package>
  <name>reactor_gazebo</name>
  <version>0.1.0</version>
  <description>reactor_gazebo</description>
  <maintainer email="marcino239@users.noreply.github.com">marcino239.github.io</maintainer>

  <license>BSD</license>

  <url type="website">http://marcino239.github.io</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>reactor_description</run_depend>
  <run_depend>reactor_control</run_depend> 
  <run_depend>gazebo_ros</run_depend> 

  <export>
  </export>
</package>
