<?xml version="1.0"?>
<package>
  <name>reactor_pick_place</name>
  <version>0.0.1</version>
  <description>Code for running MoveIt pick and place based on clam_pick_place by Dave Coleman</description>

  <maintainer email="marcino239@gmail.com">marcino239</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_simple_grasps</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_simple_grasps</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
